--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -48,14 +48,14 @@ main form input {
   margin-top: 3.2rem;
   border-radius: 2rem;
   height: 4rem;
-  border: 1px solid #c2d3ff;
+  border: 1px solid #969696;
   font-size: 1.2rem;
   font-weight: 300;
   padding-left: 3.2rem;
   color: #151f29;
 }
 main form input::placeholder {
-  color: #c2d3ff;
+  color: #969696;
 }
 main form .error-message {
   display: none;
@@ -84,6 +84,9 @@ main form button:hover {
 }
 main form button:active {
   background-color: #4f7df3;
+}
+main form button:focus-visible {
+  outline: 3px solid #151f29;
 }
 main img {
   margin-top: 6.7rem;
@@ -136,9 +139,9 @@ footer .attribution {
 }
 footer .attribution a {
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: inherit;
   text-decoration: none;
-  color: #ff5263;
+  color: #151f29;
 }
 footer .attribution a:hover {
   color: #4f7df3;
@@ -157,40 +160,60 @@ footer .attribution a:hover {
     width: 90%;
   }
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 650px) {
   header {
-    height: 9rem;
+    height: 11.2rem;
   }
   header img {
-    height: 2rem;
+    height: 2.6rem;
   }
 
   main h1 {
-    font-size: 3rem;
+    font-size: 4.8rem;
+    padding-top: 4.8rem;
   }
   main p {
     font-size: 2rem;
   }
   main form {
-    width: auto;
+    width: 64rem;
   }
   main form input {
-    width: 30rem;
-    height: 5rem;
+    width: 42rem;
+    height: 5.65rem;
     border-radius: 3rem;
-    margin-right: 1rem;
-    font-size: 2rem;
+    margin-right: 1.3rem;
+    font-size: 1.65rem;
+    padding-left: 2.9rem;
+    margin-top: 3.9rem;
+  }
+  main form .error-message {
+    position: absolute;
+    margin-left: 3.2rem;
   }
   main form button {
-    width: 15rem;
-    height: 5rem;
+    width: 20rem;
+    height: 5.65rem;
     border-radius: 3rem;
     display: inline-block;
     margin-top: 0;
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
   main img {
-    width: 50rem;
+    width: 64rem;
+    margin-top: 8.6rem;
+  }
+
+  footer {
+    margin-top: 6.7rem;
+  }
+  footer .copyright {
+    font-size: 1.2rem;
+    padding-top: 2.7rem;
+  }
+  footer .attribution {
+    font-size: 1.4rem;
+    padding-top: 2rem;
   }
 }
 
